--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   email_validator: ^2.1.17
   firebase_core: ^2.24.2
   http: ^1.1.2
+  dia: ^0.1.5
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
